# MDGeom

./: CMakeLists.txt  README.md  demo.cpp  rect.cpp  rect.hpp
inc/geom/: base.hpp  expr.hpp  file.hpp  geom.h  geom.hpp  mesh.hpp  meth.hpp  rect.hpp  test.hpp  tree.hpp
run/: draw.m  test.m
src/: demo-1.cpp  demo-2.cpp  demo-3.cpp  demo-4.cpp  demo.c  demo.cpp  file.hpp  mesh.hpp  test.cpp
src/geom/: geom.cpp  rect.cpp
src/test/: base.cpp  mesh.cpp
